<resources>
    <string name="app_name">TheResolvers</string>
    <string name="exito">¡Has ganado!</string>
    <string name="reiniciar">¿Empezamos de nuevo?</string>
    <string name="ok">Ok</string>
    <string name="salir">Salir</string>
    <string name="comenzar">Comenzar</string>
    <string name="aceptas_el_reto">¿Aceptas el reto?</string>
    <string name="titulo">TheResolvers</string>
    <string name="url_ayuda">file:///android_asset/Ayuda.html</string>
    <string name="cabecera_puntos">Nivel Jugador \u0020\u0020\u0020Mejor t(s)</string>
    <string name="channel_name">Superar récord</string>
    <string name="channel_description">Canal utilizado para enviar notificaciones cuando se rompen récords.</string>
    <string name="msjPermisos">Debe dar  permisos</string>
    <string name="msjCierreSesion">Se ha cerrado la sesión</string>
    <string name="authOk">Autenticación correcta</string>
    <string name="authKo">Autenticación fallida</string>
    <string name="msjBienvenida">¡Bienvenid@</string>
    <string name="anonimo">Anónimo</string>
    <string name="bravo">¡Bravo! Tu tiempo </string>
    <string name="record">¡Enhorabuena, has batido un nuevo récord! </string>
    <string name="ayuda">Ayuda</string>
    <string name="selector_audio">Selector audio</string>
    <string name="sonido_on_off">Sonido on/off</string>
    <string name="confinado">Confinado</string>
    <string name="nuevo_record">TR - ¡Nuevo récord N</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
</resources>
