<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadInicio">

    <Button
        android:id="@+id/botonInicio"
        android:layout_width="221dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/ripple"
        android:text="@string/comenzar"
        android:textColor="#FF9800"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo" />

    <ImageView
        android:id="@+id/img_titulo"
        android:layout_width="313dp"
        android:layout_height="77dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titulo" />

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="221dp"
        android:layout_height="41dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/passion_one_bold"
        android:gravity="center"
        android:text="@string/aceptas_el_reto"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_titulo" />

    <TextView
        android:id="@+id/puntuaciones"
        android:layout_width="290dp"
        android:layout_height="327dp"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cabecera_puntuaciones"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cabecera_puntuaciones"
        android:layout_width="290dp"
        android:layout_height="29dp"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:text="@string/cabecera_puntos"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonInicio" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/cerrar_sesion"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>